# socket-server-database

./: .gitignore  CMakeLists.txt  README.md  configure.sh
headers/: arguments.hpp  communication.hpp  database.hpp  help.hpp  helper.hpp  interpreter.hpp  prepare.hpp
includes/: a.out  arguments.cpp  comm.cpp  communication.cpp  database.cpp  interpreter.cpp  server.cpp
src/: a.out  arguments.cpp  communication.cpp  constructor.cpp  database.cpp  helper.cpp  interpreter.cpp  main.cpp  prepare.cpp  server.cpp  test.cpp
